# CppCmake

./: CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  cppcmake1
P1_basic_cpp_cmake_project/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
P1_basic_cpp_cmake_project/src/: cpp1_make_a_cpp_file.cpp  main.cpp
P2_static_and_dynamic_libraries/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
P2_static_and_dynamic_libraries/include/: ecpp.h  main.h
P2_static_and_dynamic_libraries/src/: cpp1_make_a_cpp_file.cpp  main.cpp
src/: cpp1_make_a_cpp_file.cpp
